--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ librosa>=0.10
 soundfile>=0.12
 einops>=0.7
 tqdm>=4.66
+tensorboard>=2.14
 crepe @ git+https://github.com/marl/crepe.git#egg=crepe
 torchcrepe @ git+https://github.com/maxrmorrison/torchcrepe.git#egg=torchcrepe
