--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,3 +9,6 @@ authors = [{name="Your Name"}]
 description = "Guitar-focused DDSP with waveshaper, tonestack, transients"
 requires-python = ">=3.10"
 dependencies = []
+
+[tool.setuptools]
+packages = ["ddsp_guitar"]
